# pdf-reader

./: .env  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
